# tracel-rspirv

./: Cargo.toml
.github/workflows/: ci.yaml  publish.yml
autogen/src/: binary.rs  dr.rs  utils.rs
rspirv/dr/: autogen_operand.rs
rspirv/grammar/: autogen_table.rs
rspirv/lift/: autogen_context.rs
rspirv/spirv/: autogen_spirv.rs
rspirv/sr/: autogen_decoration.rs  autogen_ops.rs
xtask/: Cargo.toml
